@@ -1,0 +1,34 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<T3DataStructure>
+    <meta>
+        <langDisable>1</langDisable>
+    </meta>
+
+    <ROOT>
+        <type>array</type>
+        <el>
+            <field_name>
+                <TCEforms>
+                    <label>LLL:EXT:contexts/Resources/Private/Language/flexform.xml:httpheader.field_name</label>
+                    <config>
+                        <type>input</type>
+                        <size>30</size>
+                        <eval>trim</eval>
+                    </config>
+                </TCEforms>
+            </field_name>
+
+            <field_values>
+                <TCEforms>
+                    <label>LLL:EXT:contexts/Resources/Private/Language/flexform.xml:httpheader.field_values</label>
+                    <config>
+                        <type>text</type>
+                        <cols>60</cols>
+                        <rows>5</rows>
+                        <eval>trim</eval>
+                    </config>
+                </TCEforms>
+            </field_values>
+        </el>
+    </ROOT>
+</T3DataStructure>
